# GreekRomanNumerical

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-publish.yml
GreekRomanUtils/: GreekRoman.py  __init__.py
GreekRomanUtils/DataStorage/: Alphabet.py  __init__.py
GreekRomanUtils/DataType/: GreekRomanType.py  __init__.py
tests/: README.md  __init__.py  test_arithmetic_operations.py  test_greek_convert.py  test_greek_number.py  test_roman_convert.py  test_roman_number.py
