[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GreekRomanUtils"
version = "1.0.3"
description = "The module converts Arabic numerals to Greek and Roman numbers"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "PKALab", email = "kpalab@pkotlyarov.ru"}
]
keywords = ["python", "greek", "roman"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/PavelKotDRM/GreekRomanNumerical"
Documentation = "https://github.com/PavelKotDRM/GreekRomanNumerical"

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "jupyter>=1.1.1",
    "jupyterlab>=3.6.8",
    "notebook>=6.5.7",
    "pytest>=7.4.4",
]
