[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GreekRomanUtils"
version = "1.0.4"
description = "The module converts Arabic numerals to Greek and Roman numbers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "PKALab", email = "kpalab@pkotlyarov.ru"}
]
keywords = ["python", "greek", "roman"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/PavelKotDRM/GreekRomanNumerical"
Documentation = "https://github.com/PavelKotDRM/GreekRomanNumerical"

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "jupyter>=1.1.1",
    "jupyterlab>=3.6.8",
    "notebook>=6.5.7",
    "pytest>=7.4.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "ty>=0.0.1a33",
]
